clusters/platform/wave-6-gitops/argo-workflows/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflows
  namespace: argo-workflows
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`workflows.platform.the-lab.zone`)
      kind: Rule
      services:
        - name: argo-workflows-server
          port: 2746
  tls:
    secretName: platform-wildcard-tls
